# innr

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  GUIDE.md  README.md  deny.toml  proptest.toml
.claude/: audit-report.md
.github/: settings.yml
.github/workflows/: ci.yml  mutants.yml  publish-validation.yml  publish.yml
benches/: batch.rs  dense.rs  dense_f64.rs  fast_math.rs  maxsim.rs  sparse.rs  ternary.rs
docs/: GUIDE.md
examples/: 01_basic_ops.rs  README.md  batch_demo.rs  binary_demo.rs  binary_vs_rabitq.rs  fast_math_demo.rs  matryoshka_search.rs  maxsim_colbert.rs  simd_benchmark.rs  ternary_demo.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: dot_diff.rs  l2_l1_diff.rs  slot_diff.rs
proptest-regressions/: sparse.txt  ternary.txt
scripts/: bench-compare.sh  plot_benchmarks.py  profile.sh  test-aws.sh  test-remote.sh
src/: backend.rs  batch.rs  binary.rs  clifford.rs  dense.rs  dense_f64.rs  distance.rs  fast_math.rs  lib.rs  maxsim.rs  metric.rs  quant.rs  scalar.rs  slot.rs  sparse.rs  sparse_ext.rs  ternary.rs  topk.rs
src/arch/: aarch64.rs  mod.rs  x86_64.rs
tests/: anndists_interop.rs  batch_tests.rs  integration.rs  maxsim_props.proptest-regressions  maxsim_props.rs  maxsim_tests.rs  numerical_edge_cases.rs  property_tests.rs  simd_correctness.rs  sparse_maxsim_props.rs
