[package]
name = "innr"
version = "0.2.5"
authors = ["Arc <attobop@gmail.com>"]
edition = "2021"
rust-version = "1.89"
description = "SIMD-accelerated vector similarity primitives with binary, ternary, and scalar quantization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/innr"
documentation = "https://docs.rs/innr"
keywords = ["simd", "vector", "similarity", "dot-product", "cosine"]
categories = ["algorithms", "science"]
publish = true
include = [
    "/src/**/*.rs",
    "/benches/**/*.rs",
    "/tests/**/*.rs",
    "/examples/**/*.rs",
    "/Cargo.toml",
    "/LICENSE-*",
    "/README.md",
]

[workspace]

[features]
default = []

[dependencies]
# No dependencies for core operations - just std

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
qntz = { version = "0.1", features = ["rabitq"] }
rand = "0.9"

[[example]]
name = "maxsim_colbert"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
lto = "thin"
codegen-units = 1

[[bench]]
name = "dense"
harness = false

[[bench]]
name = "sparse"
harness = false

[[bench]]
name = "maxsim"
harness = false

[[bench]]
name = "fast_math"
harness = false

[[bench]]
name = "ternary"
harness = false

[[bench]]
name = "batch"
harness = false

[lints.rust]
missing_docs = "warn"
unsafe_code = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
# AVX-512 intrinsics were stabilized in Rust 1.89, but the code is behind
# runtime feature detection and target_feature gates. Users on older Rust
# still get AVX2/NEON/portable paths.
incompatible_msrv = "allow"
