[package]
name = "innr"
version = "0.6.0"
authors = ["Arc <attobop@gmail.com>"]
edition = "2021"
rust-version = "1.89"
description = "SIMD-accelerated vector similarity primitives with binary, ternary, and scalar quantization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/innr"
documentation = "https://docs.rs/innr"
keywords = ["simd", "vector", "similarity", "dot-product", "cosine"]
categories = ["algorithms", "science"]
publish = true
include = [
    "/src/**/*.rs",
    "/benches/**/*.rs",
    "/tests/**/*.rs",
    "/examples/**/*.rs",
    "/Cargo.toml",
    "/LICENSE-*",
    "/README.md",
]

[workspace]

[package.metadata.docs.rs]
# Build with every feature so sparse_ext and the anndists impls are
# visible on docs.rs (they are README-advertised).
all-features = true

[features]
default = []
sparse = []
# Implements anndists::dist::Distance for the metric types in `distance`,
# making them usable directly as hnsw_rs distances (hnsw_rs binds to
# anndists's trait). Off by default to keep the core dependency-free.
anndists = ["dep:anndists"]

[dependencies]
# No dependencies for core operations - just std.
# anndists is opt-in interop; see the `anndists` feature above.
anndists = { version = "0.1.5", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
qntz = { version = "0.1", features = ["rabitq"] }
rand = "0.9"
# Proves the anndists feature against the real consumer (tests/anndists_interop.rs).
hnsw_rs = "0.3"

[[example]]
name = "maxsim_colbert"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
lto = "thin"
codegen-units = 1

[[bench]]
name = "dense"
harness = false

[[bench]]
name = "sparse"
harness = false

[[bench]]
name = "maxsim"
harness = false

[[bench]]
name = "fast_math"
harness = false

[[bench]]
name = "ternary"
harness = false

[[bench]]
name = "batch"
harness = false

[lints.rust]
missing_docs = "warn"
unsafe_code = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
# AVX-512 intrinsics were stabilized in Rust 1.89, but the code is behind
# runtime feature detection and target_feature gates. Users on older Rust
# still get AVX2/NEON/portable paths.
incompatible_msrv = "allow"
